--- a/numpy_prc.ipynb
+++ b/numpy_prc.ipynb
@@ -2,31 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import datasets\n",
     "import pandas as pd\n",
-    "iris = datasets.load_iris()\n",
-    "x = iris.data\n",
-    "y = iris.target"
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "digits = datasets.load_digits()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['data', 'target', 'target_names', 'images', 'DESCR'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(digits.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = digits.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(150, 4)"
+       "(1797, 64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,16 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = digits.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(150,)"
+       "(1797,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,230 +107,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0    1    2    3\n",
-       "0  5.1  3.5  1.4  0.2\n",
-       "1  4.9  3.0  1.4  0.2\n",
-       "2  4.7  3.2  1.3  0.2\n",
-       "3  4.6  3.1  1.5  0.2\n",
-       "4  5.0  3.6  1.4  0.2"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(x)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "digits.target_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shuffle_indexes = np.random.permutation(len(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([146,  76,  48,  57,  70,  12,  20, 143,   9,   2,   6,  37,  24,\n",
-       "        31,  99,  55,  85,  26,  17,  16,  10,  81, 137, 141,  62,  14,\n",
-       "       109,  47,  78,  91, 117,   5, 106,  28,   8,  33,  80,  86,  54,\n",
-       "       123, 140, 135,  18, 122,  21,  77,  79,  32,  90,  73, 124,  29,\n",
-       "       115,  58, 119,  13, 127, 118,  65, 136, 107,  50,  95,  59,  84,\n",
-       "       110,  74, 125,  93, 149,  42, 129, 130,   7, 148,  82, 138,   1,\n",
-       "        64,  94, 104, 105, 111,  35, 121,  56, 126,  72, 100,  87,  52,\n",
-       "       139,  34,  45, 120,  51,  25,  49, 142, 112,  53,   0, 144,  23,\n",
-       "       108,  66,  67,  11,  22, 103, 102, 116, 134,  89,  96,  68,  30,\n",
-       "       101,  41,  63,  88, 132,  43,  40,  71,  27,   4,  44,  92,  97,\n",
-       "       133, 131, 145,  75,  83,  60, 113, 147, 128,  39, 114,  46,  38,\n",
-       "         3,  98,  15,  61,  36,  19,  69])"
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2,\n",
+       "       3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shuffle_indexes"
+    "y[:30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.,   0.,   5.,  13.,   9.,   1.,   0.,   0.,   0.,   0.,  13.,\n",
+       "         15.,  10.,  15.,   5.,   0.,   0.,   3.,  15.,   2.,   0.,  11.,\n",
+       "          8.,   0.,   0.,   4.,  12.,   0.,   0.,   8.,   8.,   0.,   0.,\n",
+       "          5.,   8.,   0.,   0.,   9.,   8.,   0.,   0.,   4.,  11.,   0.,\n",
+       "          1.,  12.,   7.,   0.,   0.,   2.,  14.,   5.,  10.,  12.,   0.,\n",
+       "          0.,   0.,   0.,   6.,  13.,  10.,   0.,   0.,   0.],\n",
+       "       [  0.,   0.,   0.,  12.,  13.,   5.,   0.,   0.,   0.,   0.,   0.,\n",
+       "         11.,  16.,   9.,   0.,   0.,   0.,   0.,   3.,  15.,  16.,   6.,\n",
+       "          0.,   0.,   0.,   7.,  15.,  16.,  16.,   2.,   0.,   0.,   0.,\n",
+       "          0.,   1.,  16.,  16.,   3.,   0.,   0.,   0.,   0.,   1.,  16.,\n",
+       "         16.,   6.,   0.,   0.,   0.,   0.,   1.,  16.,  16.,   6.,   0.,\n",
+       "          0.,   0.,   0.,   0.,  11.,  16.,  10.,   0.,   0.],\n",
+       "       [  0.,   0.,   0.,   4.,  15.,  12.,   0.,   0.,   0.,   0.,   3.,\n",
+       "         16.,  15.,  14.,   0.,   0.,   0.,   0.,   8.,  13.,   8.,  16.,\n",
+       "          0.,   0.,   0.,   0.,   1.,   6.,  15.,  11.,   0.,   0.,   0.,\n",
+       "          1.,   8.,  13.,  15.,   1.,   0.,   0.,   0.,   9.,  16.,  16.,\n",
+       "          5.,   0.,   0.,   0.,   0.,   3.,  13.,  16.,  16.,  11.,   5.,\n",
+       "          0.,   0.,   0.,   0.,   3.,  11.,  16.,   9.,   0.],\n",
+       "       [  0.,   0.,   7.,  15.,  13.,   1.,   0.,   0.,   0.,   8.,  13.,\n",
+       "          6.,  15.,   4.,   0.,   0.,   0.,   2.,   1.,  13.,  13.,   0.,\n",
+       "          0.,   0.,   0.,   0.,   2.,  15.,  11.,   1.,   0.,   0.,   0.,\n",
+       "          0.,   0.,   1.,  12.,  12.,   1.,   0.,   0.,   0.,   0.,   0.,\n",
+       "          1.,  10.,   8.,   0.,   0.,   0.,   8.,   4.,   5.,  14.,   9.,\n",
+       "          0.,   0.,   0.,   7.,  13.,  13.,   9.,   0.,   0.],\n",
+       "       [  0.,   0.,   0.,   1.,  11.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
+       "          7.,   8.,   0.,   0.,   0.,   0.,   0.,   1.,  13.,   6.,   2.,\n",
+       "          2.,   0.,   0.,   0.,   7.,  15.,   0.,   9.,   8.,   0.,   0.,\n",
+       "          5.,  16.,  10.,   0.,  16.,   6.,   0.,   0.,   4.,  15.,  16.,\n",
+       "         13.,  16.,   1.,   0.,   0.,   0.,   0.,   3.,  15.,  10.,   0.,\n",
+       "          0.,   0.,   0.,   0.,   2.,  16.,   4.,   0.,   0.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# 确定测试数据集占20%\n",
-    "testdata_ratio = 0.2\n",
-    "# 计算测试数据集个数\n",
-    "testdata_size = int(len(x) * testdata_ratio)\n",
-    "\n",
-    "# 确定训练数据集和测试数据集索引范围\n",
-    "train_indexes = shuffle_indexes[testdata_size:]\n",
-    "test_indexes = shuffle_indexes[:testdata_size]"
+    "somedata = x[918]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x_train = x[train_indexes]\n",
-    "y_train = y[train_indexes]\n",
-    "\n",
-    "x_test = x[test_indexes]\n",
-    "y_test = y[test_indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(120, 4)\n",
-      "(120,)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(x_train.shape)\n",
-    "print(y_train.shape)"
+    "y[918]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(30, 4)\n",
-      "(30,)\n"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACuxJREFUeJzt3d+LXPUZx/HPp6vSWu1GkrRIEjO5KAEpdCNLQFJkG7HE\nGjRCLxJQWCnkSnFpQbRX9h+QzUURJGoFU6WNJohYxaLBCq11k2xa88OShi3ZoN0NRfxx0RB9erET\niJIyZzPnfOfs0/cLFvfHsN9n0LfnzOzM+ToiBCCnrw16AADNIXAgMQIHEiNwIDECBxIjcCAxAgcS\nI3AgMQIHEruiiV+6YsWK6HQ6TfzqgTp9+nTR9ebm5oqttXz58mJrrVmzpthaQ0NDxdYqaWZmRmfP\nnnWv2zUSeKfT0dTUVBO/eqAmJiaKrrdr165ia23durXYWpOTk8XWWrZsWbG1ShodHa10O07RgcQI\nHEiMwIHECBxIjMCBxAgcSIzAgcQIHEisUuC2t9h+3/ZJ2w83PRSAevQM3PaQpF9Jul3SjZJ22L6x\n6cEA9K/KEXyjpJMRcSoizkl6XtJdzY4FoA5VAl8l6eJ3Wcx2vweg5Wp7ks32TttTtqfm5+fr+rUA\n+lAl8DOSLn5/3+ru974kIp6IiNGIGF25cmVd8wHoQ5XA35X0XdvrbF8labukl5odC0Ader4fPCLO\n275f0muShiQ9FRFHG58MQN8qXfAhIl6R9ErDswCoGa9kAxIjcCAxAgcSI3AgMQIHEiNwIDECBxIj\ncCCxRnY2yar0LhmHDx8uttaGDRuKrTU+Pl5srbGxsWJrtRFHcCAxAgcSI3AgMQIHEiNwIDECBxIj\ncCAxAgcSI3AgsSo7mzxle872eyUGAlCfKkfwX0va0vAcABrQM/CIeEvSvwvMAqBmPAYHEmPrIiCx\n2gJn6yKgfThFBxKr8mey5yT9SdJ627O2f9r8WADqUGVvsh0lBgFQP07RgcQIHEiMwIHECBxIjMCB\nxAgcSIzAgcQIHEiMrYsW4dFHHy263v79+4uttXbt2mJrdTqdYmv9v+MIDiRG4EBiBA4kRuBAYgQO\nJEbgQGIEDiRG4EBiBA4kRuBAYlUuurjG9pu2j9k+avvBEoMB6F+V16Kfl/TziDhk+1pJB22/HhHH\nGp4NQJ+q7E32QUQc6n7+iaTjklY1PRiA/i3qMbjtjqQNkt65xM/YughomcqB275G0guSJiLi46/+\nnK2LgPapFLjtK7UQ956IeLHZkQDUpcqz6Jb0pKTjEfFY8yMBqEuVI/gmSfdK2mx7uvvx44bnAlCD\nKnuTvS3JBWYBUDNeyQYkRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYuxNtggzMzNF17v77ruLrTU8\nPFxsrZJ7rk1MTBRbq404ggOJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiVW56OLXbf/F9pHu\n1kW/LDEYgP5VeanqfyRtjohPu5dPftv27yPizw3PBqBPVS66GJI+7X55ZfcjmhwKQD2qbnwwZHta\n0pyk1yOCrYuAJaBS4BHxeUSMSFotaaPt713iNmxdBLTMop5Fj4iPJL0paUsz4wCoU5Vn0VfaXtb9\n/BuSbpN0ounBAPSvyrPo10t6xvaQFv6H8NuIeLnZsQDUocqz6H/Vwp7gAJYYXskGJEbgQGIEDiRG\n4EBiBA4kRuBAYgQOJEbgQGJsXbQInU6n6HoL79QtY3p6uthaY2Njxdbatm1bsbWk8v+N9MIRHEiM\nwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIrHLg3WujH7bN9diAJWIxR/AHJR1vahAA9au6s8lq\nSXdI2t3sOADqVPUIPinpIUlfNDgLgJpV2fhgq6S5iDjY43bsTQa0TJUj+CZJd9qekfS8pM22n/3q\njdibDGifnoFHxCMRsToiOpK2S3ojIu5pfDIAfePv4EBii7qiS0QckHSgkUkA1I4jOJAYgQOJETiQ\nGIEDiRE4kBiBA4kROJAYgQOJLfmtiw4cOFBsrZmZmWJrSdL4+HixtUZGRoqtVXJ7n/379xdbS5Im\nJiaKrtcLR3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwILFKr2TrXlH1E0mfSzofEaNNDgWg\nHot5qeoPI+JsY5MAqB2n6EBiVQMPSX+wfdD2ziYHAlCfqqfoP4iIM7a/Lel12yci4q2Lb9ANf6ck\n3XDDDTWPCeByVDqCR8SZ7j/nJO2TtPESt2HrIqBlqmw++E3b1174XNKPJL3X9GAA+lflFP07kvbZ\nvnD730TEq41OBaAWPQOPiFOSvl9gFgA1489kQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiS25Lcu\nKrmd0OTkZLG1JGnbtm3F1iq5BdSRI0eKrTU2NlZsrTbiCA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4k\nRuBAYgQOJFYpcNvLbO+1fcL2cds3Nz0YgP5VfanqLkmvRsRPbF8l6eoGZwJQk56B2x6WdIukcUmK\niHOSzjU7FoA6VDlFXydpXtLTtg/b3t29PjqAlqsS+BWSbpL0eERskPSZpIe/eiPbO21P2Z6an5+v\neUwAl6NK4LOSZiPine7Xe7UQ/JewdRHQPj0Dj4gPJZ22vb77rVslHWt0KgC1qPos+gOS9nSfQT8l\n6b7mRgJQl0qBR8S0pNGGZwFQM17JBiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4ktuT3Jhsf\nHy+2Vsn9uyTpuuuuK7bW8PBwsbX27dtXbK2RkZFia7URR3AgMQIHEiNwIDECBxIjcCAxAgcSI3Ag\nMQIHEiNwILGegdteb3v6oo+PbU+UGA5Af3q+VDUi3pc0Ikm2hySdkVTutYYALttiT9FvlfSPiPhn\nE8MAqNdiA98u6blL/YCti4D2qRx4d9ODOyX97lI/Z+sioH0WcwS/XdKhiPhXU8MAqNdiAt+h/3F6\nDqCdKgXe3Q/8NkkvNjsOgDpV3ZvsM0nLG54FQM14JRuQGIEDiRE4kBiBA4kROJAYgQOJETiQGIED\niTki6v+l9rykxb6ldIWks7UP0w5Z7xv3a3DWRkTPd3U1EvjlsD0VEaODnqMJWe8b96v9OEUHEiNw\nILE2Bf7EoAdoUNb7xv1qudY8BgdQvzYdwQHUrBWB295i+33bJ20/POh56mB7je03bR+zfdT2g4Oe\nqU62h2wftv3yoGepk+1ltvfaPmH7uO2bBz1TPwZ+it691vrftXDFmFlJ70raERHHBjpYn2xfL+n6\niDhk+1pJByVtW+r36wLbP5M0KulbEbF10PPUxfYzkv4YEbu7Fxq9OiI+GvRcl6sNR/CNkk5GxKmI\nOCfpeUl3DXimvkXEBxFxqPv5J5KOS1o12KnqYXu1pDsk7R70LHWyPSzpFklPSlJEnFvKcUvtCHyV\npNMXfT2rJCFcYLsjaYOkdwY7SW0mJT0k6YtBD1KzdZLmJT3dffixu3s9wiWrDYGnZvsaSS9ImoiI\njwc9T79sb5U0FxEHBz1LA66QdJOkxyNig6TPJC3p54TaEPgZSWsu+np193tLnu0rtRD3nojIckXa\nTZLutD2jhYdTm20/O9iRajMraTYiLpxp7dVC8EtWGwJ/V9J3ba/rPqmxXdJLA56pb7athcdyxyPi\nsUHPU5eIeCQiVkdERwv/rt6IiHsGPFYtIuJDSadtr+9+61ZJS/pJ0UqXTW5SRJy3fb+k1yQNSXoq\nIo4OeKw6bJJ0r6S/2Z7ufu8XEfHKAGdCbw9I2tM92JySdN+A5+nLwP9MBqA5bThFB9AQAgcSI3Ag\nMQIHEiNwIDECBxIjcCAxAgcS+y/8eKxSn8PfNwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11358a7b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(x_test.shape)\n",
-    "print(y_test.shape)"
+    "somedata_img = somedata.reshape(8, 8)\n",
+    "plt.imshow(somedata_img, cmap = matplotlib.cm.binary)\n",
+    "plt.show()"
    ]
   },
   {
